@@ -4,18 +4,18 @@ import com.ticket.dto.UserDTO;
 import com.ticket.entity.User;
 import com.ticket.enums.UserRole;
 import com.ticket.repository.UserRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
     
-    @Autowired
     private UserRepository userRepository;
+
+    public UserService(UserRepository userRepository){
+        this.userRepository=userRepository;
+    }
     
     /**
      * Get all agents (active only)
@@ -24,7 +24,7 @@ public class UserService {
         return userRepository.findByRoleAndIsActive(UserRole.SUPPORT_AGENT, true)
                 .stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
     
     /**
@@ -34,7 +34,7 @@ public class UserService {
         return userRepository.findByRoleAndIsActive(UserRole.SUPPORT_MANAGER, true)
                 .stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
     
     /**
